--- a/crypto_clustering.ipynb
+++ b/crypto_clustering.ipynb
@@ -31,10 +31,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d050565",
+   "id": "0cd6ca88",
    "metadata": {},
    "source": [
-    "### Deliverable 1: Preprocessing the Data for PCA"
+    "### Preprocessing the Data for PCA"
    ]
   },
   {
@@ -1397,10 +1397,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e173452d",
+   "id": "c627e2fb",
    "metadata": {},
    "source": [
-    "### Deliverable 2: Reducing Data Dimensions Using PCA"
+    "### Reducing Data Dimensions Using PCA"
    ]
   },
   {
@@ -1541,10 +1541,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "864814f8",
+   "id": "88e1f11d",
    "metadata": {},
    "source": [
-    "### Deliverable 3: Clustering Cryptocurrencies Using K-Means\n",
+    "### Clustering Cryptocurrencies Using K-Means\n",
     "#### Finding the Best Value for 'k' Using the Elbow Curve"
    ]
   },
